--- a/lighthouse-cli/test/fixtures/debugger.html
+++ b/lighthouse-cli/test/fixtures/debugger.html
@@ -11,7 +11,10 @@
 
   <script>
     setTimeout(() => {
-      debugger; debugger;
+      debugger;
+      debugger;
+      debugger;
+      debugger;
     }, 0);
   </script>
 </body>
