--- a/lighthouse-cli/test/fixtures/a11y/a11y_tester.html
+++ b/lighthouse-cli/test/fixtures/a11y/a11y_tester.html
@@ -34,6 +34,10 @@
     <section>
       <div id="aria-input-field-name" role="textbox">text-in-a-box</div>
     </section>
+    <p>aria-meter-name</p>
+    <section>
+      <div id="aria-meter-name" role="meter">text-in-a-box</div>
+    </section>
     <p>aria-required-attr</p>
     <section>
       <div
