--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -605,12 +605,16 @@ limitations under the License.
     .lh-gauge--pwa__logo--primary-color {
       fill: #304FFE;
     }
+    /* .dark .lh-gauge--pwa__logo--primary-color {
+      fill: #615db1;
+    } */
 
     .lh-gauge--pwa__logo--secondary-color {
       fill: #3D3D3D;
     }
     .dark .lh-gauge--pwa__logo--secondary-color {
       fill: #D8B6B6;
+      /* fill: #ffffff; */
     }
 
     /* No passing groups. */
@@ -618,22 +622,12 @@ limitations under the License.
       display: inline;
     }
     /* Just optimized. Same n/a line as no passing groups. */
-    .lh-gauge--pwa__wrapper.lh-badged--pwa-optimized:not(.lh-badged--pwa-installable):not(.lh-badged--pwa-fast-reliable) .lh-gauge--pwa__na-line {
-      display: inline;
-    }
-
-    /* Just fast and reliable. */
-    .lh-gauge--pwa__wrapper.lh-badged--pwa-fast-reliable:not(.lh-badged--pwa-installable) .lh-gauge--pwa__fast-reliable-badge {
+    .lh-gauge--pwa__wrapper.lh-badged--pwa-optimized:not(.lh-badged--pwa-installable) .lh-gauge--pwa__na-line {
       display: inline;
     }
 
     /* Just installable. */
-    .lh-gauge--pwa__wrapper.lh-badged--pwa-installable:not(.lh-badged--pwa-fast-reliable) .lh-gauge--pwa__installable-badge {
-      display: inline;
-    }
-
-    /* Fast and reliable and installable. */
-    .lh-gauge--pwa__wrapper.lh-badged--pwa-fast-reliable.lh-badged--pwa-installable .lh-gauge--pwa__fast-reliable-installable-badges {
+    .lh-gauge--pwa__wrapper.lh-badged--pwa-installable .lh-gauge--pwa__installable-badge {
       display: inline;
     }
 
