--- a/lighthouse-cli/test/fixtures/seo/seo-tester.html
+++ b/lighthouse-cli/test/fixtures/seo/seo-tester.html
@@ -58,7 +58,7 @@
   <p class='small-4'> 4. </p>
   <h6>2</h6>
   <font size="1">3<b>4</b></font>
-  <div style="">
+  <div style=''>
     <p style='font-size:10px'> 5 </p>
   </div>
   <script class='small'>
