misc(treemap): remove byte size from title

--- a/lighthouse-treemap/app/index.html
+++ b/lighthouse-treemap/app/index.html
@@ -65,7 +65,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
 
         <div class="lh-header--section">
           <span class="lh-header--url-and-size">
-            <a href="" class="lh-header--url" target="_blank" rel="noopener"></a> <span class="lh-text-dim">·</span> <span class="lh-header--size lh-text-dim"></span></span>
+            <a href="" class="lh-header--url" target="_blank" rel="noopener"></a> <span class="lh-text-dim"></span></span>
           </span>
           <div class="lh-mode-wrapper">
             <div class="lh-modes">
