misc(treemap): tweak styles for mobile

--- a/lighthouse-treemap/app/index.html
+++ b/lighthouse-treemap/app/index.html
@@ -22,7 +22,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
     <div class="lh-settings">
       <header>
         <div class="lh-header--section">
-          <span>
+          <span class="lh-logotitle">
             <!-- Lighthouse logo. Stolen from templates.html -->
             <svg class="lh-topbar__logo" viewBox="0 0 24 24">
               <defs>
