clients(viewer): add disclaimer regarding devtools bug

--- a/lighthouse-viewer/app/index.html
+++ b/lighthouse-viewer/app/index.html
@@ -35,6 +35,11 @@ Unless required by applicable law or agreed to in writing, software distributed 
       or <a href="https://web.dev/measure">web.dev/measure</a>.</div>
       <input type="url" class="viewer-placeholder__url js-gist-url"
              placeholder="Enter or paste Gist URL">
+
+      <br>
+      <b>DevTools users:</b> there is a <a href="https://github.com/GoogleChrome/lighthouse/issues/12841">known bug</a>
+      where "Open in Viewer" does not work from the DevTools Lighthouse panel. This will be fixed on or around Sep 21.
+      In the meantime, you can select "Copy JSON" from the Lighthouse report and paste the result on this page.
     </div>
   </div>
 </div>
