--- a/lighthouse-viewer/app/index.html
+++ b/lighthouse-viewer/app/index.html
@@ -36,10 +36,18 @@ Unless required by applicable law or agreed to in writing, software distributed 
       <input type="url" class="viewer-placeholder__url js-gist-url"
              placeholder="Enter or paste Gist URL">
 
-      <br>
-      <b>DevTools users:</b> there is a <a href="https://github.com/GoogleChrome/lighthouse/issues/12841">known bug</a>
-      where "Open in Viewer" does not work from the DevTools Lighthouse panel. This will be fixed on or around Sep 21.
-      In the meantime, you can select "Copy JSON" from the Lighthouse report and paste the result on this page.
+      <p class="dt-disclaimer" style="display: none">
+        <b>DevTools users:</b> there is a <a href="https://github.com/GoogleChrome/lighthouse/issues/12841">known bug</a>
+        where "Open in Viewer" does not work<br>
+        from the DevTools Lighthouse panel. This will be fixed in<br>
+        Chrome 94 (around Sep 21). In the meantime, you can<br>
+        select "Copy JSON" from the Lighthouse report and paste the result on this page.
+      </p>
+      <script>
+        if (location.search === '' && document.referrer === '') {
+          document.querySelector('.dt-disclaimer').style.display = '';
+        }
+      </script>
     </div>
   </div>
 </div>
