--- a/flow-report/assets/standalone-flow-template.html
+++ b/flow-report/assets/standalone-flow-template.html
@@ -24,7 +24,7 @@ limitations under the License.
   <style>/*%%LIGHTHOUSE_CSS%%*/</style>
   <style>/*%%LIGHTHOUSE_FLOW_CSS%%*/</style>
 </head>
-<body class="lh-root lh-vars">
+<body class="flow-vars lh-root lh-vars">
   <noscript>Lighthouse report requires JavaScript. Please enable.</noscript>
 
   <main><!-- report populated here --></main>
