--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -221,7 +221,7 @@ limitations under the License.
   </style>
   <div class="lh-scores-wrapper">
     <div class="lh-scores-container">
-      <div class="pyro">
+      <div class="lh-pyro">
         <div class="lh-before"></div>
         <div class="lh-after"></div>
       </div>
