--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -562,6 +562,16 @@ limitations under the License.
   </a>
 </template>
 
+<!-- Lighthouse category ratio -->
+<template id="ratio">
+  <a href="#" class="lh-ratio__wrapper">
+    <div class="lh-ratio__content">
+      <div class="lh-ratio__background"></div>
+    </div>
+    <div class="lh-ratio__label"></div>
+  </a>
+</template>
+
 
 <!-- Lighthouse PWA badge gauge -->
 <template id="gaugePwa">
