--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -484,5 +484,25 @@ if (location.search === '') {
   console.error('Error! Error!');
 </script>
 
+<style>
+  #animated-boi {
+    animation: 3s badanim;
+    border: 1px solid black;
+  }
+
+  @keyframes badanim {
+    from {
+      margin-left: 100%;
+      height: 50px;
+    }
+
+    to {
+      margin-left: 0%;
+      height: 200px;
+    }
+  }
+</style>
+<div id="animated-boi">hi</div>
+
 </body>
 </html>
