--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -565,8 +565,10 @@ limitations under the License.
 <!-- Lighthouse category ratio -->
 <template id="ratio">
   <a href="#" class="lh-ratio__wrapper">
-    <div class="lh-ratio__content">
-      <div class="lh-ratio__background"></div>
+    <div class="lh-ratio__content-wrapper">
+      <div class="lh-ratio__content">
+        <div class="lh-ratio__background"></div>
+      </div>
     </div>
     <div class="lh-ratio__label"></div>
   </a>
