--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -562,15 +562,15 @@ limitations under the License.
   </a>
 </template>
 
-<!-- Lighthouse category ratio -->
-<template id="ratio">
-  <a href="#" class="lh-ratio__wrapper">
-    <div class="lh-ratio__content-wrapper">
-      <div class="lh-ratio__content">
-        <div class="lh-ratio__background"></div>
+<!-- Lighthouse category fraction -->
+<template id="fraction">
+  <a href="#" class="lh-fraction__wrapper">
+    <div class="lh-fraction__content-wrapper">
+      <div class="lh-fraction__content">
+        <div class="lh-fraction__background"></div>
       </div>
     </div>
-    <div class="lh-ratio__label"></div>
+    <div class="lh-fraction__label"></div>
   </a>
 </template>
 
