--- a/lighthouse-viewer/app/index.html
+++ b/lighthouse-viewer/app/index.html
@@ -17,6 +17,9 @@ Unless required by applicable law or agreed to in writing, software distributed 
   <link rel="canonical" href="https://googlechrome.github.io/lighthouse/viewer/">
 </head>
 <body class="lh-root lh-vars">
+  <h1>About Me</h1>
+  <p>My name is Brian Msizi Cindi. I am from Cape Town in South Africa</p>
+
 
 <div class="drop_zone"></div>
 
