--- a/report/assets/templates.html
+++ b/report/assets/templates.html
@@ -549,7 +549,7 @@ limitations under the License.
 
 <!-- Lighthouse score gauge -->
 <template id="gauge">
-  <a href="#" class="lh-gauge__wrapper">
+  <a class="lh-gauge__wrapper">
     <!-- Wrapper exists for the ::before plugin icon. Cannot create pseudo-elements on svgs. -->
     <div class="lh-gauge__svg-wrapper">
       <svg viewBox="0 0 120 120" class="lh-gauge">
@@ -565,7 +565,7 @@ limitations under the License.
 
 <!-- Lighthouse category fraction -->
 <template id="fraction">
-  <a href="#" class="lh-fraction__wrapper">
+  <a class="lh-fraction__wrapper">
     <div class="lh-fraction__content-wrapper">
       <div class="lh-fraction__content">
         <div class="lh-fraction__background"></div>
